# claudemob

backend/: README.md  config.yaml  experiment.py  main.py  pyproject.toml
backend/logs/20250824_235852/: config.yaml  transcript.json
backend/logs/20250825_000235/: config.yaml  transcript.json
backend/plots/: README  data_generator.py  main.py  plot_attractor_scatter.py  plot_concept_heatmap.py  plot_frustration_timeline.py  plot_language_competition.py  plot_memory_interference.py  plot_network_cascade.py  plot_philosophical_drift.py  plot_prompt_resistance.py
backend/plots/v2/: memory_contamination_interference.py  moral_injury_recovery_timeline.py  multi_agent_philosophical_analysis.py  system_prompt_effectiveness.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/experiment/stream/: route.ts
frontend/components/: config-form.tsx  experiment-runner.tsx  models-dropdown.tsx
